--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "build:addon": "node-gyp rebuild",
     "build:debug": "node-gyp rebuild --debug && mv build/Debug build/Release",
     "build:ts": "tsc",
-    "sync:lib": "just sync:lib && sudo cp sdk/libagora_rtm_sdk.so /usr/lib/"
+    "sync:lib": "just sync:lib && sudo cp sdk/libagora_rtm_sdk.so /usr/lib/",
+    "sync-download:lib": "just sync:lib"
   },
   "agora": {
     "liburl": "https://download.agora.io/rtmsdk/release/Agora_RTM_SDK_for_Linux_v1_2_2.zip?_ga=2.22727995.1663946580.1579401405-565952542.1562048466"
