--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "build:addon": "node-gyp rebuild",
     "build:debug": "node-gyp rebuild --debug && mv build/Debug build/Release",
     "build:ts": "tsc",
-    "sync:lib": "just sync:lib && sudo cp sdk/libagora_rtm_sdk.so /usr/lib/",
-    "sync-download:lib": "just sync:lib"
+    "sync:lib": "just sync:lib",
+    "install:lib": "just sync:lib && sudo cp sdk/libagora_rtm_sdk.so /usr/lib/"
   },
   "agora": {
-    "liburl": "https://download.agora.io/rtmsdk/release/Agora_RTM_SDK_for_Linux_v1_2_2.zip?_ga=2.22727995.1663946580.1579401405-565952542.1562048466"
+    "liburl": "http://192.168.99.149:8086/v1.2.2_rtm_getMembersQps50In2s/RTMSDK/Linux/Agora_RTM_SDK_for_Linux_v1.2.2_20200206_278.zip"
   },
   "babel": {
     "presets": [
@@ -85,7 +85,8 @@
     "jest": "24.4.0",
     "just-task": "^0.14.0",
     "nan": "^2.13.0",
-    "typescript": "3.3.3333"
+    "typescript": "3.3.3333",
+    "uap-lib": "0.0.22"
   },
   "devDependencies": {}
 }
